Fixed modal scrollbar

--- a/static/storengine/sass/pages/_shop.scss
+++ b/static/storengine/sass/pages/_shop.scss
@@ -191,7 +191,7 @@
   height: 100%;
   width: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .product-image {
